# distroless-hc

./: Cargo.toml  Dockerfile  Dockerfile-testserver  README.md  docker-compose.yml
src/: config.rs  main.rs
src/config/: dur.rs  mod.rs
src/health_check/: hc.rs  mod.rs
src/test_server/: server.rs
